[gd_scene load_steps=2 format=3 uid="uid://c6htrfc7w1lbv"]

[ext_resource type="Script" uid="uid://b7ledettscax4" path="res://scripts/char/panals/CharacterSheet.gd" id="1_xwmgk"]

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwmgk")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 0
offset_right = 415.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "charname"

[node name="RankLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Rank\"f"

[node name="HealthLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "HP 40"

[node name="StaminaLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "stm"

[node name="ManaLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "mana"

[node name="XPLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "xp 2000"

[node name="CurrencyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="SkillsLabel" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="EquippedLabel2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"
